Fixed bug with Polling code-link having the wrong color, fixed margin sizes, project select  boxes are disabled on mobile, added polling v2 video and section

--- a/css.css
+++ b/css.css
@@ -1,6 +1,7 @@
 /* Entire Document */
 html, body {
     height: 100%;
+    /*scroll-behavior: smooth;*/
 }
 body {
     margin: 0;
@@ -290,7 +291,7 @@ nav ul li a:hover {
     transition: color .5s;
 }
 
-#code-link, #website-link{
+#code-link, #website-link, #prev-code-link{
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
     color: white; 
@@ -582,6 +583,12 @@ button{
     .navIcon{
         font-size: 25px;
        }
+    #overlay{
+       max-width: 100%;
+    }
+    #projectSelectBoxes{
+        margin-top:  83px;
+    }
 }
 @media screen and (max-width: 500px) {
     #overlay{
@@ -623,7 +630,7 @@ button{
     #projectSelectBoxes{
         overflow-x: visible;
         white-space: normal;
-        margin-top: 83px;
+        display: none;
    }
     .projectSelectImage{
         width: 50px;
